# run_with_logger

./: .gitignore  LICENSE  README.md  mypy-requirements.txt  mypy.ini  pyproject.toml
.github/workflows/: mypy.yml  publish.yml  test.yml
src/run_with_logger/: __init__.py  _pipe_capture.py  _pipe_to_logger.py  _run_with_logger.py  _types.py
test/: test_doctests.py  test_run_with_logger.py
